# Crystal

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  compile_commands.json  test.cpp
assets/shaders/: fragment.glsl  vertex.glsl
crystal/: CmakeLists.txt  main.cpp
crystal/core/: Color.cpp  Color.h  Core.h  Size.cpp  Size.h
crystal/include/core/geometry/: Matrix.h  Vector2.h  Vector3.h
crystal/include/crystal/core/: Color.h  Core.h  Logger.h  Window.h
crystal/include/crystal/geometry/: Geometry.h  Matrix.h  Vector2.h  Vector3.h
crystal/include/crystal/graphics/: Buffer.h  Graphics.h  GraphicsAPI.h  Renderer.h  Shader.h  WindowContext.h
crystal/include/crystal/graphics/GL/: GLBuffer.h  GLGraphicsContext.h  GLHelper.h  GLRenderer.h  GLShader.h
crystal/include/crystal/layout/: Size.h
crystal/include/crystal/ui/: Component.h
crystal/src/: main.cpp
crystal/src/core/: Logger.cpp  Window.cpp
crystal/src/core/geometry/: Matrix.cpp  Vector3.cpp
crystal/src/geometry/: Matrix.cpp  Vector3.cpp
crystal/src/graphics/: Buffer.cpp  Color.cpp  Graphics.cpp  GraphicsAPI.cpp  Renderer.cpp  Shader.cpp
crystal/src/graphics/GL/: GLGraphicsContext.cpp  GLRenderer.cpp  GLShader.cpp
crystal/src/ui/: component.h  window.cpp  window.h
crystal/ui/: window.cpp  window.h
include/core/: Color.h  Core.h  Size.h
include/core/geometry/: Vector2.h  Vector3.h
include/crystal/core/: Core.h  Logger.h  Shader.h  Window.h
include/crystal/geometry/: Geometry.h  Matrix.h  Vector2.h  Vector3.h
include/crystal/graphics/: ApiContextManager.h  Buffer.h  GLHelper.h  GraphicsAPI.h  Renderer.h  Shader.h  WindowContext.h
include/crystal/graphics/GL/: GLBuffer.h  GLGraphicsContext.h  GLHelper.h  GLShader.h
include/crystal/layout/: Size.h
include/crystal/ui/: Component.h
include/glad/: glad.h
include/ui/: window.h
src/: glad.cpp  main.cpp
src/core/: Color.cpp  Logger.cpp  Shader.cpp  Size.cpp  Window.cpp
src/core/geometry/: Matrix.cpp  Vector3.cpp
src/geometry/: Matrix.cpp  Vector3.cpp
src/graphics/: Buffer.cpp  Buffer.h  GLHelper.cpp  GraphicsAPI.cpp  Renderer.cpp  Shader.cpp  VertexArray.cpp
src/graphics/GL/: GLGraphicsContext.cpp  GLHelper.cpp  GLShader.cpp
src/layout/: Size.cpp
src/ui/: window.cpp
tests/: CMakeLists.txt  matrix.h  tests.cpp  vector.h
